// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`go to create page 1`] = `
Object {
  "Options": Object {},
  "html": "
<div class=\\"project-list\\">
  <!--0-->
  <a class=\\"project-card project-card-create\\" href=\\"/\\">
    <div class=\\"create-icon\\"></div>
  </a>
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {},
  "html": "
<div class=\\"project-list\\">
  <!--0-->
  <a class=\\"project-card project-card-create\\" href=\\"/\\">
    <div class=\\"create-icon\\"></div>
  </a>
</div>
",
}
`;

exports[`renders list 1`] = `
Object {
  "Options": Object {
    "projects": Array [
      Object {
        "cwd": "/tmp/",
        "id": 1,
        "name": "Simple CI",
      },
      Object {
        "cwd": "/home/",
        "id": 1,
        "name": "ShamUI",
      },
    ],
  },
  "html": "
<div class=\\"project-list\\">
  <a class=\\"project-card\\" href=\\"/\\"><span class=\\"name\\">Simple CI</span></a>
  <a class=\\"project-card\\" href=\\"/\\"><span class=\\"name\\">ShamUI</span></a>
  <!--0-->
  <a class=\\"project-card project-card-create\\" href=\\"/\\">
    <div class=\\"create-icon\\"></div>
  </a>
</div>
",
}
`;
